--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Nós Dois</title>
+    <title>Surpresa Romântica</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="falling-flowers"></div>
-
-    <div class="container">
-        <h1>Momentos com Você</h1>
-        <p class="message">"Cada instante ao seu lado é inesquecível. Eu te amo!"</p>
-
-        <div class="slideshow-container">
-            <img class="slides active" src="img1.jpg" alt="Foto 1">
-            <img class="slides" src="img2.jpg" alt="Foto 2">
-            <img class="slides" src="img3.jpg" alt="Foto 3">
-            <img class="slides" src="img4.jpg" alt="Foto 4">
-        </div>
-
-        <audio autoplay loop>
-            <source src="music.mp3" type="audio/mpeg">
-            Seu navegador não suporta o elemento de áudio.
-        </audio>
-
+ 
+    <div id="gift-box" onclick="openGift()">
+        <h1 style="color: white;">Clique para abrir o presente</h1>
     </div>
 
-    <script src="script.js"></script>
+   
+    <div id="slideshow">
+        <img src="img1.jpg" class="slide" style="opacity: 1;">
+        <img src="img2.jpg" class="slide">
+        <img src="img3.jpg" class="slide">
+        <img src="img4.jpg" class="slide">
+    </div>
+
+    <audio id="bg-music" loop preload="auto">
+        <source src="married_life.ogg" type="audio/ogg">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+
+   <script src="script.js"></script>
 </body>
 </html>
