--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="root">
         <div class="title">Algo inesperado está aqui...</div>
         <div class="slidesShow">
-            <img src="carta.png" alt="carta" class="slades active" onclick={openLetter()}>
-            <img src="img1.jpg" alt="foto 1" class="slades">
-            <img src="img2.jpg" alt="foto 2" class="slades">
-            <img src="img3.jpg" alt="foto 3" class="slades">
-            <img src="img4.jpg" alt="foto 4" class="slades">
+            <img src="assets/carta.png" alt="carta" class="slades active" onclick={openLetter()}>
+            <img src="assets/img1.jpg" alt="foto 1" class="slades">
+            <img src="assets/img2.jpg" alt="foto 2" class="slades">
+            <img src="assets/img3.jpg" alt="foto 3" class="slades">
+            <img src="assets/img4.jpg" alt="foto 4" class="slades">
         </div>
         <div class="subtitle">Clique para abrir e descubra! ❤️</div>
     </div>
     <audio autoplay loop>
-        <source src="married_life.ogg" type="audio/ogg">
+        <source src="assets/married_life.ogg" type="audio/ogg">
     </audio>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
